style: contrast fix for activity titles

--- a/src/scss/components/_activity-list.scss
+++ b/src/scss/components/_activity-list.scss
@@ -5,6 +5,10 @@
 .activity-list__item-right {
 	h3 {
 		color: var(--color-link-text);
+
+		[data-user-color-scheme='light'] & {
+			color: var(--color-dark-alt);
+		}
 	}
 
 	p {
